--- a/chatbot_ru/talker/Dockerfile
+++ b/chatbot_ru/talker/Dockerfile
@@ -5,14 +5,10 @@ COPY requirements.txt /tmp/
 RUN apt-get update \
     && apt-get install -y postgresql-server-dev-11 gcc python3-dev musl-dev \
     && apt-get install -y gettext-base \
-    && pip install --upgrade pip \
-    && pip install -r /tmp/requirements.txt 
-RUN apt-get install -y bash \
-                   build-essential \
-                   git \
-                   ca-certificates && \
-    rm -rf /var/lib/apt/lists
-RUN python3 -m pip install jupyter torch transformers[torch]
+    && apt-get install -y bash \
+    && rm -rf /var/lib/apt/lists
+RUN pip install --upgrade pip 
+RUN --mount=type=cache,target=/root/.cache/pip pip install -r /tmp/requirements.txt 
 
 ENV LC_ALL=C.UTF-8
 ENV LANG=C.UTF-8
@@ -20,4 +16,5 @@ RUN mkdir /talker
 COPY ./ /talker/
 
 WORKDIR /talker
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
+#CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
+CMD ["gunicorn", "-w", "1", "-k", "uvicorn.workers.UvicornWorker", "main:app", "--bind", "0.0.0.0:8000", "--timeout", "100"]
