--- a/chatbot_ru/talker/requirements.txt
+++ b/chatbot_ru/talker/requirements.txt
@@ -1,5 +1,13 @@
 fastapi[all]
 psycopg2
 gunicorn
-torch
+--find-links https://download.pytorch.org/whl/torch_stable.html
+torch==1.8.1+cpu
+torchvision==0.9.1+cpu
+torchaudio==0.8.1
 transformers[torch]
+onnxruntime
+onnx
+onnxconverter-common
+coloredlogs
+toml
