--- a/chatbot_ru/talker/requirements.txt
+++ b/chatbot_ru/talker/requirements.txt
@@ -3,9 +3,9 @@ fastapi-utils
 psycopg2-binary
 gunicorn
 --find-links https://download.pytorch.org/whl/torch_stable.html
-torch==1.8.1+cpu
-torchvision==0.9.1+cpu
-torchaudio==0.8.1
+torch
+torchvision
+torchaudio
 transformers[torch]
 onnxruntime
 onnx
